Update metadata, add evaluation archetype

--- a/gdl2/Mayo_score_ulcerative_colitis.v1.test.yml
+++ b/gdl2/Mayo_score_ulcerative_colitis.v1.test.yml
@@ -47,7 +47,7 @@ test_cases:
       gt0006|Physician rating of disease activity: 0|local::at0020|Normal|
   expected_output:
     1:
-      gt0010|Comment: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
+      gt0011|Interpretation: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
       gt0008|Mayo score: 0
 - id: All inputs 1 point
   input:
@@ -58,7 +58,7 @@ test_cases:
       gt0006|Physician rating of disease activity: 1|local::at0021|Mild|
   expected_output:
     1:
-      gt0010|Comment: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
+      gt0011|Interpretation: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
       gt0008|Mayo score: 4
 - id: All inputs 2 point
   input:
@@ -69,7 +69,7 @@ test_cases:
       gt0006|Physician rating of disease activity: 2|local::at0022|Moderate|
   expected_output:
     1:
-      gt0010|Comment: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
+      gt0011|Interpretation: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
       gt0008|Mayo score: 8
 - id: All inputs 3 point
   input:
@@ -80,5 +80,5 @@ test_cases:
       gt0006|Physician rating of disease activity: 3|local::at0023|Severe|
   expected_output:
     1:
-      gt0010|Comment: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
+      gt0011|Interpretation: The higher the score (maximum 12 points), the more severe the ulcerative colitis.
       gt0008|Mayo score: 12
