Add recommendation element

--- a/gdl2/Cornell_Assessment_of_Pediatric_Delirium.v1.test.yml
+++ b/gdl2/Cornell_Assessment_of_Pediatric_Delirium.v1.test.yml
@@ -116,6 +116,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Interpretation: Pediatric delirium absent
+      gt0023|Recommendation: Continue usual care and monitoring.
       gt0017|CAPD score: 0
 - id: All inputs 1 points returns 'Pediatric delirium absent'
   input:
@@ -131,6 +132,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Interpretation: Pediatric delirium absent
+      gt0023|Recommendation: Continue usual care and monitoring.
       gt0017|CAPD score: 8
 - id: All inputs 2 points returns 'Pediatric delirium present'
   input:
@@ -146,6 +148,7 @@ test_cases:
   expected_output:
     1:
       gt0015|Interpretation: Pediatric delirium present
+      gt0023|Recommendation: Investigate and treat underlying medical condition(s) causing delirium, consider interventions with parents and child life services, and/or consult to psychiatry or palliative care as appropriate, consider medications like melatonin or QUEtiapine (SEROquel) in select cases.
       gt0017|CAPD score: 16
 - id: All inputs 3 points returns 'Pediatric delirium present'
   input:
@@ -176,4 +179,5 @@ test_cases:
   expected_output:
     1:
       gt0015|Interpretation: Pediatric delirium present
+      gt0023|Recommendation: Investigate and treat underlying medical condition(s) causing delirium, consider interventions with parents and child life services, and/or consult to psychiatry or palliative care as appropriate, consider medications like melatonin or QUEtiapine (SEROquel) in select cases.
       gt0017|CAPD score: 32
