--- a/gdl2/MELD-Na_Score_guideline.v1.test.yml
+++ b/gdl2/MELD-Na_Score_guideline.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: MELD-Na_Score_guideline.v1
 test_cases:
-- id: Cr mg/dl, Bili mg/dl, Na mmol/l, Dialysis No
+- id: Cr mg/dl, Bilirubin mg/dl, Na mmol/l, Dialysis No
   input:
     1:
       gt0003|Dialysis history (Or CVVHD for ≥24 hours in the past week): 0|local::at0007|No|
@@ -19,7 +19,7 @@ test_cases:
       gt0044|INR: 1,1
       gt0050|MELD-Na score: 14.8,1
       gt0053|90-day mortality: <2%
-- id: Cr, Bili and INR<1, Na<125
+- id: Cr, Bilirubin and INR<1, Na<125
   input:
     1:
       gt0003|Dialysis history (Or CVVHD for ≥24 hours in the past week): 0|local::at0007|No|
@@ -37,7 +37,7 @@ test_cases:
       gt0044|INR: 1,1
       gt0050|MELD-Na score: 19.0,1
       gt0053|90-day mortality: 3-4%
-- id: Cr, Bili conversion umol/l to mg/dl
+- id: Cr, Bilirubin conversion umol/l to mg/dl
   input:
     1:
       gt0003|Dialysis history (Or CVVHD for ≥24 hours in the past week): 0|local::at0007|No|
