--- a/gdl2/ASCVD_risk_statin_recommendation.v1.test.yml
+++ b/gdl2/ASCVD_risk_statin_recommendation.v1.test.yml
@@ -1,12 +1,12 @@
 guidelines:
   1: ASCVD_risk_statin_recommendation.v1
 test_cases:
-- id: Test no input
+- id: 1. Test no input
   input:
     1: {}
   expected_output:
     1: {}
-- id: Age too high
+- id: 2. Age too high
   input:
     1:
       gt0055|Age: 80,a
@@ -14,7 +14,7 @@ test_cases:
   expected_output:
     1:
       gt0091|Comment: Age too high; please change to proceed.
-- id: Age too low
+- id: 3. Age too low
   input:
     1:
       gt0055|Age: 30,a
@@ -22,7 +22,7 @@ test_cases:
   expected_output:
     1:
       gt0091|Comment: Age too low; please change to proceed.
-- id: Age 40-75 yrs, h/o ASCVD, High-intensity statins
+- id: 4. Age 40-75 yrs, h/o ASCVD, High-intensity statins
   input:
     1:
       gt0055|Age: 56,a
@@ -30,7 +30,7 @@ test_cases:
   expected_output:
     1:
       gt0074|Recommendation: High-intensity statin recommended.
-- id: No h/o ASCVD, LDL >= 190mg/dl, High-intensity statins
+- id: 5. No h/o ASCVD, LDL >= 190mg/dl, High-intensity statins
   input:
     1:
       gt0064|History of ASCVD: local::at0005|No|
@@ -38,7 +38,7 @@ test_cases:
   expected_output:
     1:
       gt0074|Recommendation: High-intensity statin recommended.
-- id: Female, white, not treated for HTN
+- id: 6. Female, white, not treated for HTN
   input:
     1:
       gt0015|Systolic blood pressure: 120,mm[Hg]
@@ -56,7 +56,7 @@ test_cases:
     1:
       gt0074|Recommendation: No statin recommended.
       gt0073|Estimated 10-y risk: 2.1,%
-- id: Female, others, treated for HTN
+- id: 7. Female, others, treated for HTN
   input:
     1:
       gt0015|Systolic blood pressure: 140,mm[Hg]
@@ -74,7 +74,7 @@ test_cases:
     1:
       gt0074|Recommendation: No statin recommended.
       gt0073|Estimated 10-y risk: 3.83,%
-- id: Female, white, treated for HTN, high intensity statin
+- id: 8. Female, white, treated for HTN, high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 140,mm[Hg]
@@ -92,7 +92,7 @@ test_cases:
     1:
       gt0074|Recommendation: High-intensity statin recommended.
       gt0073|Estimated 10-y risk: 23.83,%
-- id: Female, African American, treated for HTN, high intensity statin
+- id: 9. Female, African American, treated for HTN, high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 140,mm[Hg]
@@ -110,7 +110,7 @@ test_cases:
     1:
       gt0074|Recommendation: High-intensity statin recommended.
       gt0073|Estimated 10-y risk: 42.8,%
-- id: Female, African American, not treated for HTN, no statin
+- id: 10. Female, African American, not treated for HTN, no statin
   input:
     1:
       gt0015|Systolic blood pressure: 110,mm[Hg]
@@ -128,7 +128,7 @@ test_cases:
     1:
       gt0074|Recommendation: No statin recommended.
       gt0073|Estimated 10-y risk: 2.3,%
-- id: Male, white, not treated for HTN, no statin
+- id: 11. Male, white, not treated for HTN, no statin
   input:
     1:
       gt0015|Systolic blood pressure: 110,mm[Hg]
@@ -146,7 +146,7 @@ test_cases:
     1:
       gt0074|Recommendation: No statin recommended.
       gt0073|Estimated 10-y risk: 4.7,%
-- id: Male, white, treated for HTN, moderate to high intensity statin
+- id: 12. Male, white, treated for HTN, moderate to high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 150,mm[Hg]
@@ -162,9 +162,9 @@ test_cases:
       gt0070|Smoker: 0|local::at0041|No|
   expected_output:
     1:
-      gt0074|Recommendation: Moderate- to high-intensity statin recommended.
+      gt0074|Recommendation: Moderate to high-intensity statin recommended.
       gt0073|Estimated 10-y risk: 10.2,%
-- id: Male, African American, not treated for HTN, moderate to high intensity statin
+- id: 13. Male, African American, not treated for HTN, moderate to high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 120,mm[Hg]
@@ -180,9 +180,9 @@ test_cases:
       gt0070|Smoker: 1|local::at0042|Yes|
   expected_output:
     1:
-      gt0074|Recommendation: Moderate- to high-intensity statin recommended.
+      gt0074|Recommendation: Moderate to high-intensity statin recommended.
       gt0073|Estimated 10-y risk: 10.1,%
-- id: Male, African American, treated for HTN, moderate to high intensity statin
+- id: 14. Male, African American, treated for HTN, moderate to high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 130,mm[Hg]
@@ -198,9 +198,9 @@ test_cases:
       gt0070|Smoker: 1|local::at0042|Yes|
   expected_output:
     1:
-      gt0074|Recommendation: Moderate- to high-intensity statin recommended.
+      gt0074|Recommendation: Moderate to high-intensity statin recommended.
       gt0073|Estimated 10-y risk: 19.0,%
-- id: Female, others, moderate intensity statins
+- id: 15. Female, others, moderate intensity statins
   input:
     1:
       gt0015|Systolic blood pressure: 120,mm[Hg]
@@ -218,7 +218,7 @@ test_cases:
     1:
       gt0074|Recommendation: Moderate-intensity statin recommended.
       gt0073|Estimated 10-y risk: 5.1,%
-- id: Male, others, high intensity statin
+- id: 16. Male, others, high intensity statin
   input:
     1:
       gt0015|Systolic blood pressure: 140,mm[Hg]
