--- a/gdl2/BASFI_score_guideline.v1.test.yml
+++ b/gdl2/BASFI_score_guideline.v1.test.yml
@@ -4,16 +4,16 @@ test_cases:
 - id: score 10
   input:
     1:
-      gt0003|Putting on your socks or tights without help or aids?: 10,1
-      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid?: 10,1
-      gt0005|Reaching up to a high shelf without help or aids?: 10,1
-      gt0006|Getting up out of an armless dining room chair without using your hands or any other help?: 10,1
-      gt0007|Getting up off the floor without any help from lying on your back?: 10,1
-      gt0008|Standing unsupported for 10 minutes without discomfort?: 10,1
-      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step: 10,1
-      gt0010|Looking over your shoulder without turning your body?: 10,1
-      gt0011|Doing physically demanding activities?: 10,1
-      gt0012|Doing a full day activities whether it be at home or work?: 10,1
+      gt0003|Putting on your socks or tights without help or aids? (Numeric scale from 0 - 10): 10,1
+      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid? (Numeric scale from 0 - 10): 10,1
+      gt0005|Reaching up to a high shelf without help or aids? (Numeric scale from 0 - 10): 10,1
+      gt0006|Getting up out of an armless dining room chair without using your hands or any other help? (Numeric scale from 0 - 10): 10,1
+      gt0007|Getting up off the floor without any help from lying on your back? (Numeric scale from 0 - 10): 10,1
+      gt0008|Standing unsupported for 10 minutes without discomfort? (Numeric scale from 0 - 10): 10,1
+      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step (Numeric scale from 0 - 10): 10,1
+      gt0010|Looking over your shoulder without turning your body? (Numeric scale from 0 - 10): 10,1
+      gt0011|Doing physically demanding activities? (Numeric scale from 0 - 10): 10,1
+      gt0012|Doing a full day activities whether it be at home or work? (Numeric scale from 0 - 10): 10,1
   expected_output:
     1:
       gt0014|Total score: 10.0,1
@@ -21,16 +21,16 @@ test_cases:
 - id: score 5
   input:
     1:
-      gt0003|Putting on your socks or tights without help or aids?: 5,1
-      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid?: 5,1
-      gt0005|Reaching up to a high shelf without help or aids?: 5,1
-      gt0006|Getting up out of an armless dining room chair without using your hands or any other help?: 5,1
-      gt0007|Getting up off the floor without any help from lying on your back?: 5,1
-      gt0008|Standing unsupported for 10 minutes without discomfort?: 5,1
-      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step: 5,1
-      gt0010|Looking over your shoulder without turning your body?: 5,1
-      gt0011|Doing physically demanding activities?: 5,1
-      gt0012|Doing a full day activities whether it be at home or work?: 5,1
+      gt0003|Putting on your socks or tights without help or aids? (Numeric scale from 0 - 10): 5,1
+      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid? (Numeric scale from 0 - 10): 5,1
+      gt0005|Reaching up to a high shelf without help or aids? (Numeric scale from 0 - 10): 5,1
+      gt0006|Getting up out of an armless dining room chair without using your hands or any other help? (Numeric scale from 0 - 10): 5,1
+      gt0007|Getting up off the floor without any help from lying on your back? (Numeric scale from 0 - 10): 5,1
+      gt0008|Standing unsupported for 10 minutes without discomfort? (Numeric scale from 0 - 10): 5,1
+      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step (Numeric scale from 0 - 10): 5,1
+      gt0010|Looking over your shoulder without turning your body? (Numeric scale from 0 - 10): 5,1
+      gt0011|Doing physically demanding activities? (Numeric scale from 0 - 10): 5,1
+      gt0012|Doing a full day activities whether it be at home or work? (Numeric scale from 0 - 10): 5,1
   expected_output:
     1:
       gt0014|Total score: 5.0,1
@@ -38,16 +38,16 @@ test_cases:
 - id: score 0
   input:
     1:
-      gt0003|Putting on your socks or tights without help or aids?: 0,1
-      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid?: 0,1
-      gt0005|Reaching up to a high shelf without help or aids?: 0,1
-      gt0006|Getting up out of an armless dining room chair without using your hands or any other help?: 0,1
-      gt0007|Getting up off the floor without any help from lying on your back?: 0,1
-      gt0008|Standing unsupported for 10 minutes without discomfort?: 0,1
-      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step: 0,1
-      gt0010|Looking over your shoulder without turning your body?: 0,1
-      gt0011|Doing physically demanding activities?: 0,1
-      gt0012|Doing a full day activities whether it be at home or work?: 0,1
+      gt0003|Putting on your socks or tights without help or aids? (Numeric scale from 0 - 10): 0,1
+      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid? (Numeric scale from 0 - 10): 0,1
+      gt0005|Reaching up to a high shelf without help or aids? (Numeric scale from 0 - 10): 0,1
+      gt0006|Getting up out of an armless dining room chair without using your hands or any other help? (Numeric scale from 0 - 10): 0,1
+      gt0007|Getting up off the floor without any help from lying on your back? (Numeric scale from 0 - 10): 0,1
+      gt0008|Standing unsupported for 10 minutes without discomfort? (Numeric scale from 0 - 10): 0,1
+      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step (Numeric scale from 0 - 10): 0,1
+      gt0010|Looking over your shoulder without turning your body? (Numeric scale from 0 - 10): 0,1
+      gt0011|Doing physically demanding activities? (Numeric scale from 0 - 10): 0,1
+      gt0012|Doing a full day activities whether it be at home or work? (Numeric scale from 0 - 10): 0,1
   expected_output:
     1:
       gt0014|Total score: 0.0,1
@@ -55,16 +55,16 @@ test_cases:
 - id: score 4.5
   input:
     1:
-      gt0003|Putting on your socks or tights without help or aids?: 0,1
-      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid?: 1,1
-      gt0005|Reaching up to a high shelf without help or aids?: 2,1
-      gt0006|Getting up out of an armless dining room chair without using your hands or any other help?: 3,1
-      gt0007|Getting up off the floor without any help from lying on your back?: 4,1
-      gt0008|Standing unsupported for 10 minutes without discomfort?: 5,1
-      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step: 6,1
-      gt0010|Looking over your shoulder without turning your body?: 7,1
-      gt0011|Doing physically demanding activities?: 8,1
-      gt0012|Doing a full day activities whether it be at home or work?: 9,1
+      gt0003|Putting on your socks or tights without help or aids? (Numeric scale from 0 - 10): 0,1
+      gt0004|Bending forward from the waist to pick up a pen from the floor without an aid? (Numeric scale from 0 - 10): 1,1
+      gt0005|Reaching up to a high shelf without help or aids? (Numeric scale from 0 - 10): 2,1
+      gt0006|Getting up out of an armless dining room chair without using your hands or any other help? (Numeric scale from 0 - 10): 3,1
+      gt0007|Getting up off the floor without any help from lying on your back? (Numeric scale from 0 - 10): 4,1
+      gt0008|Standing unsupported for 10 minutes without discomfort? (Numeric scale from 0 - 10): 5,1
+      gt0009|Climbing 12-15 steps without using a handrail or walking aid. One foot on each step (Numeric scale from 0 - 10): 6,1
+      gt0010|Looking over your shoulder without turning your body? (Numeric scale from 0 - 10): 7,1
+      gt0011|Doing physically demanding activities? (Numeric scale from 0 - 10): 8,1
+      gt0012|Doing a full day activities whether it be at home or work? (Numeric scale from 0 - 10): 9,1
   expected_output:
     1:
       gt0014|Total score: 4.5,1
