--- a/gdl2/MASCC_risk_index.v1.test.yml
+++ b/gdl2/MASCC_risk_index.v1.test.yml
@@ -4,92 +4,73 @@ test_cases:
 - id: BP missing (negative test)
   input:
     1:
-      gt0003|Age: 65,a
+      gt0021|Age (years): 0|local::at0006|≥60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 0|local::at0030|Severe|
       gt0031|Active COPD: 0|local::at0019|Yes|
       gt0032|Type of cancer: 0|local::at0031|Hematologic, prior fungal infection|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0035|Age (years): 0|local::at0006|≥60|
+  expected_output: {}
 - id: Age missing (negative test)
   input:
     1:
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 0|local::at0030|Severe|
       gt0031|Active COPD: 0|local::at0019|Yes|
       gt0032|Type of cancer: 0|local::at0031|Hematologic, prior fungal infection|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
+  expected_output: {}
 - id: Fever missing (negative test)
   input:
     1:
-      gt0003|Age: 34,a
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0029|Burden of illness (symptom severity): 0|local::at0030|Severe|
       gt0031|Active COPD: 0|local::at0019|Yes|
       gt0032|Type of cancer: 0|local::at0031|Hematologic, prior fungal infection|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
-      gt0035|Age (years): 2|local::at0005|<60|
+  expected_output: {}
 - id: Symptom missing (negative test)
   input:
     1:
-      gt0003|Age: 34,a
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0031|Active COPD: 0|local::at0019|Yes|
       gt0032|Type of cancer: 0|local::at0031|Hematologic, prior fungal infection|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
-      gt0035|Age (years): 2|local::at0005|<60|
+  expected_output: {}
 - id: COPD missing (negative test)
   input:
     1:
-      gt0003|Age: 34,a
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 3|local::at0012|Moderate|
       gt0032|Type of cancer: 0|local::at0031|Hematologic, prior fungal infection|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
-      gt0035|Age (years): 2|local::at0005|<60|
+  expected_output: {}
 - id: Type of cancer missing (negative test)
   input:
     1:
-      gt0003|Age: 34,a
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 3|local::at0012|Moderate|
       gt0031|Active COPD: 4|local::at0018|No|
       gt0033|Dehydration requiring IV fluids: 0|local::at0028|Yes|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
-      gt0035|Age (years): 2|local::at0005|<60|
+  expected_output: {}
 - id: Dehydration missing (negative test)
   input:
     1:
-      gt0003|Age: 34,a
-      gt0005|Blood Pressure: 56,mm[Hg]
+      gt0022|Hypotension: 0|local::at0016|Yes|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 3|local::at0012|Moderate|
       gt0031|Active COPD: 4|local::at0018|No|
       gt0032|Type of cancer: 4|local::at0021|Solid tumor|
-  expected_output:
-    1:
-      gt0036|Hypotension: 0|local::at0016|Yes|
-      gt0035|Age (years): 2|local::at0005|<60|
+  expected_output: {}
 - id: Test no input
   input:
     1: {}
@@ -98,8 +79,8 @@ test_cases:
 - id: MASCC >21 returns low risk
   input:
     1:
-      gt0003|Age: 45,a
-      gt0005|Blood Pressure: 90,mm[Hg]
+      gt0022|Hypotension: 5|local::at0015|No|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 3|local::at0008|Outpatient|
       gt0029|Burden of illness (symptom severity): 3|local::at0012|Moderate|
       gt0031|Active COPD: 4|local::at0018|No|
@@ -108,15 +89,13 @@ test_cases:
   expected_output:
     1:
       gt0037|MASCC Risk Index: 24
-      gt0036|Hypotension: 5|local::at0015|No|
-      gt0035|Age (years): 2|local::at0005|<60|
       gt0039|Risk for febrile neutropenia: Low risk
       gt0040|Recommendation: Consider oral and/or outpatient empirical antibiotic therapy.
 - id: MASCC <21 returns high risk
   input:
     1:
-      gt0003|Age: 45,a
-      gt0005|Blood Pressure: 90,mm[Hg]
+      gt0022|Hypotension: 5|local::at0015|No|
+      gt0021|Age (years): 2|local::at0005|<60|
       gt0028|Status at onset of fever: 0|local::at0009|Inpatient|
       gt0029|Burden of illness (symptom severity): 0|local::at0030|Severe|
       gt0031|Active COPD: 4|local::at0018|No|
@@ -125,7 +104,5 @@ test_cases:
   expected_output:
     1:
       gt0037|MASCC Risk Index: 18
-      gt0036|Hypotension: 5|local::at0015|No|
-      gt0035|Age (years): 2|local::at0005|<60|
       gt0039|Risk for febrile neutropenia: High risk
       gt0040|Recommendation: Admit for empiric antibiotics if not already inpatient.
