Add reference range

--- a/gdl2/Coronary_Perfusion_Pressure_guideline.v1.test.yml
+++ b/gdl2/Coronary_Perfusion_Pressure_guideline.v1.test.yml
@@ -9,6 +9,7 @@ test_cases:
   expected_output:
     1:
       gt0007|Coronary Perfusion Pressure: 45,mm[Hg]
+      gt0009|Normal reference range: 58 - 78 mmHg
 - id: CPP 60
   input:
     1:
@@ -17,6 +18,7 @@ test_cases:
   expected_output:
     1:
       gt0007|Coronary Perfusion Pressure: 60,mm[Hg]
+      gt0009|Normal reference range: 58 - 78 mmHg
 - id: CPP 88
   input:
     1:
@@ -25,3 +27,4 @@ test_cases:
   expected_output:
     1:
       gt0007|Coronary Perfusion Pressure: 88,mm[Hg]
+      gt0009|Normal reference range: 58 - 78 mmHg
