Update element names and guideline rule

--- a/gdl2/UK_PBC_Risk_Score_guideline.v1.test.yml
+++ b/gdl2/UK_PBC_Risk_Score_guideline.v1.test.yml
@@ -5,11 +5,11 @@ test_cases:
   input:
     1:
       gt0004|Bilirubin 12 Month: 55,mmol/l
-      gt0006|ULN of Bilirubin 12 month: 60,1
+      gt0006|ULN of Bilirubin: 60,1
       gt0008|AST or ALT 12 Month: 50,U/l
-      gt0010|ULN of AST/ALT 12 month: 55,1
+      gt0010|ULN of AST/ALT: 55,1
       gt0012|Alk Phos 12 Month: 8,U/l
-      gt0014|ULN of Alk Phos 12 month: 20,1
+      gt0014|ULN of Alk Phos: 20,1
       gt0017|Baseline Albumin: 10,gm/l
       gt0029|LLN of baseline Albumin: 5,1
       gt0031|Platelet count: 12,10*9/l
