--- a/gdl2/Insulin_Dosage_Calculator_guideline.v1.test.yml
+++ b/gdl2/Insulin_Dosage_Calculator_guideline.v1.test.yml
@@ -11,6 +11,7 @@ test_cases:
       gt0011|Target blood glucose: 100,mmol/l
       gt0013|Is the Insulin sensitivity (correction) factor known?: local::at0007|Yes|
       gt0014|Insulin sensitivity (correction) factor: 2,mg/dl
+      gt0038|Total Daily Insulin Dose (TDID): 30,U
       gt0035|Weight, kg: 60,kg
   expected_output:
     1:
@@ -26,13 +27,14 @@ test_cases:
       gt0008|Current blood glucose: 150,mg/dl
       gt0011|Target blood glucose: 100,mmol/l
       gt0013|Is the Insulin sensitivity (correction) factor known?: local::at0008|No|
+      gt0038|Total Daily Insulin Dose (TDID): 24,U
       gt0035|Weight, kg: 40,kg
   expected_output:
     1:
-      gt0019|Total Mealtime Insulin Dose: 1.0,U
-      'gt0018|Insulin Dose to Correct High Blood Sugar ': 0.6,U
+      gt0019|Total Mealtime Insulin Dose: 1.7,U
+      'gt0018|Insulin Dose to Correct High Blood Sugar ': 0.7,U
       gt0015|Total Daily Insulin Dose (TDID): 22.0,U
-      gt0017|Carbohydrate Coverage Insulin Dose: 0.4,U
+      gt0017|Carbohydrate Coverage Insulin Dose: 1.0,U
 - id: Glucose in mmol/L
   input:
     1:
@@ -41,10 +43,11 @@ test_cases:
       gt0008|Current blood glucose: 10,mmol/l
       gt0011|Target blood glucose: 6,mmol/l
       gt0013|Is the Insulin sensitivity (correction) factor known?: local::at0008|No|
+      gt0038|Total Daily Insulin Dose (TDID): 26,U
       gt0035|Weight, kg: 40,kg
   expected_output:
     1:
-      gt0019|Total Mealtime Insulin Dose: 0.4,U
-      'gt0018|Insulin Dose to Correct High Blood Sugar ': 0.0,U
+      gt0019|Total Mealtime Insulin Dose: 1.1,U
+      'gt0018|Insulin Dose to Correct High Blood Sugar ': 0.1,U
       gt0015|Total Daily Insulin Dose (TDID): 22.0,U
-      gt0017|Carbohydrate Coverage Insulin Dose: 0.4,U
+      gt0017|Carbohydrate Coverage Insulin Dose: 1.0,U
