--- a/gdl2/Glasgow_Pancreatitis_guideline.v1.test.yml
+++ b/gdl2/Glasgow_Pancreatitis_guideline.v1.test.yml
@@ -15,7 +15,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is not consistent with diagnosis of severe pancreatitis. The associated mortality prediction for this score is 2%.
-      gt0012|Total score: 0
+      gt0012|Glasgow pancreatitis score: 0
 - id: score 1
   input:
     1:
@@ -30,7 +30,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is not consistent with diagnosis of severe pancreatitis. The associated mortality prediction for this score is 2%.
-      gt0012|Total score: 1
+      gt0012|Glasgow pancreatitis score: 1
 - id: score 2
   input:
     1:
@@ -45,7 +45,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is not consistent with diagnosis of severe pancreatitis. The associated mortality prediction for this score is 2%.
-      gt0012|Total score: 2
+      gt0012|Glasgow pancreatitis score: 2
 - id: score 3
   input:
     1:
@@ -60,7 +60,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 15%.
-      gt0012|Total score: 3
+      gt0012|Glasgow pancreatitis score: 3
 - id: score 4
   input:
     1:
@@ -75,7 +75,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 15%.
-      gt0012|Total score: 4
+      gt0012|Glasgow pancreatitis score: 4
 - id: score 5
   input:
     1:
@@ -90,7 +90,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 40%.
-      gt0012|Total score: 5
+      gt0012|Glasgow pancreatitis score: 5
 - id: score 6
   input:
     1:
@@ -105,7 +105,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 40%.
-      gt0012|Total score: 6
+      gt0012|Glasgow pancreatitis score: 6
 - id: score 7
   input:
     1:
@@ -120,7 +120,7 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 100%.
-      gt0012|Total score: 7
+      gt0012|Glasgow pancreatitis score: 7
 - id: score 8
   input:
     1:
@@ -135,4 +135,4 @@ test_cases:
   expected_output:
     1:
       gt0013|Mortality risk: This score is consistent with high likelihood of severe pancreatitis. The associated mortality prediction for this score is 100%.
-      gt0012|Total score: 8
+      gt0012|Glasgow pancreatitis score: 8
