--- a/gdl2/SLEDAI-2K.v1.test.yml
+++ b/gdl2/SLEDAI-2K.v1.test.yml
@@ -6,37 +6,35 @@ test_cases:
     1: {}
   expected_output:
     1: {}
-    
-- id: Calculate SLEDAI-2K score
+
+- id: Calculate SLEDAI-2K
   input:
     1:
-      gt0003|Recent onset seizure: 0|local::at0003|No|
-      gt0004|Psychosis: 8|local::at0007|Yes|
-      gt0005|Organic brain syndrome: 8|local::at0010|Yes|
-      gt0006|Visual disturbance: 0|local::at0012|No|
-      gt0007|New onset sensory or motor neuropathy involving cranial nerves: 8|local::at0016|Yes|
-      gt0008|Lupus headache: 0|local::at0018|No|
-      gt0009|New onset stroke: 8|local::at0024|Yes|
-      gt0010|Vasculitis: 0|local::at0025|No|
-      gt0011|Arthritis: 4|local::at0028|Yes|
-      gt0012|Myositis: 0|local::at0030|No|
-      gt0013|Heme-granular or RBC urinary casts: 0|local::at0033|No|
-      gt0014|Hematuria: 4|local::at0037|Yes|
-      gt0015|Proteinuria: 0|local::at0039|No|
-      gt0016|Pyuria: 2|local::at0046|Yes|
-      gt0017|Inflammatory-type rash: 0|local::at0043|No|
-      gt0018|Alopecia: 0|local::at0048|No|
-      gt0019|Oral or nasal mucosal ulcers: 0|local::at0051|No|
-      gt0020|Pleuritic chest pain with pleural rub/effusion or pleural thickening: 0|local::at0054|No|
-      gt0021|Pericarditis: 0|local::at0060|No|
-      gt0022|Low complement: 2|local::at0059|Yes|
-      gt0023|High DNA binding: 0|local::at0063|No|
-      gt0030|WBC <3 x 109/L: 1|local::at0071|Yes|
-      gt0033|Platelet count: 90,10*9/l
-      gt0035|Temperature: 40,°C
+      gt0042|Recent onset seizure: 0|local::at0005|No|
+      gt0043|Psychosis: 0|local::at0005|No|
+      gt0044|Organic brain syndrome: 0|local::at0005|No|
+      gt0045|Visual disturbance: 8|local::at0006|Yes|
+      gt0046|New onset sensory or motor neuropathy involving cranial nerves: 0|local::at0005|No|
+      gt0047|Lupus headache: 8|local::at0006|Yes|
+      gt0048|New onset stroke: 8|local::at0006|Yes|
+      gt0049|Vasculitis: 0|local::at0005|No|
+      gt0050|Arthritis: 0|local::at0005|No|
+      gt0051|Myositis: 0|local::at0005|No|
+      gt0052|Heme-granular or RBC urinary casts: 4|local::at0006|Yes|
+      gt0053|Hematuria: 0|local::at0005|No|
+      gt0054|Proteinuria: 4|local::at0006|Yes|
+      gt0055|Pyuria: 2|local::at0006|Yes|
+      gt0056|Inflammatory-type rash: 0|local::at0005|No|
+      gt0057|Alopecia: 2|local::at0006|Yes|
+      gt0058|Oral or nasal mucosal ulcers: 0|local::at0005|No|
+      gt0059|Pleuritic chest pain with pleural rub/effusion or pleural thickening: 0|local::at0005|No|
+      gt0060|Pericarditis: 2|local::at0006|Yes|
+      gt0061|Low complement: 0|local::at0005|No|
+      gt0062|High DNA binding: 2|local::at0006|Yes|
+      gt0063|Temp >100.4 °F (38°C): 0|local::at0005|No|
+      gt0064|Platelets <100 x 109/L: 0|local::at0005|No|
+      gt0065|WBC <3 x 109/L: 1|local::at0006|Yes|
   expected_output:
     1:
-      gt0029|Comment: Authors recommend a cutoff of 3 or 4 to define active disease and the need to increase therapy (see Evidence for details)
-      gt0025|Temp >100.4 °F (38°C): 1|local::at0067|Yes|
-      gt0028|SLEDAI-2K: 47
-      gt0026|Platelets <100 x 109/L: 1|local::at0073|Yes|
+      gt0066|SLEDAI-2K: 41
+      gt0067|Comment: Authors recommend a cutoff of 3 or 4 to define active disease and the need to increase therapy.
