--- a/gdl2/BISAP_score_guideline.v1.test.yml
+++ b/gdl2/BISAP_score_guideline.v1.test.yml
@@ -1,81 +1,81 @@
 guidelines:
   1: BISAP_score_guideline.v1
 test_cases:
-- id: score 0
+- id: score 5 in first 24 hours
   input:
     1:
-      'gt0003|Blood urea nitrogen (BUN) ': 0|local::at0005|<25 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 0|local::at0008|Absent|
-      gt0005|SIRS: 0|local::at0011|<2 SIRS criteria|
-      gt0006|Age: 0|local::at0014|<=60 years|
-      gt0007|Pleural effusion: 0|local::at0008|Absent|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
-  expected_output:
-    1:
-      gt0010|In-hospital mortality risk: <1%
-      gt0009|Total score: 0
-- id: score 1
-  input:
-    1:
-      'gt0003|Blood urea nitrogen (BUN) ': 1|local::at0006|>= 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 0|local::at0008|Absent|
-      gt0005|SIRS: 0|local::at0011|<2 SIRS criteria|
-      gt0006|Age: 0|local::at0014|<=60 years|
-      gt0007|Pleural effusion: 0|local::at0008|Absent|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
-  expected_output:
-    1:
-      gt0010|In-hospital mortality risk: <2%
-      gt0009|Total score: 1
-- id: score 2
-  input:
-    1:
-      'gt0003|Blood urea nitrogen (BUN) ': 1|local::at0006|>= 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 1|local::at0009|Present|
-      gt0005|SIRS: 0|local::at0011|<2 SIRS criteria|
-      gt0006|Age: 0|local::at0014|<=60 years|
-      gt0007|Pleural effusion: 0|local::at0008|Absent|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
-  expected_output:
-    1:
-      gt0010|In-hospital mortality risk: 2%
-      gt0009|Total score: 2
-- id: score 3
-  input:
-    1:
-      'gt0003|Blood urea nitrogen (BUN) ': 1|local::at0006|>= 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 1|local::at0009|Present|
-      gt0005|SIRS: 1|local::at0012|>=2  SIRS criteria|
-      gt0006|Age: 0|local::at0014|<=60 years|
-      gt0007|Pleural effusion: 0|local::at0008|Absent|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
-  expected_output:
-    1:
-      gt0010|In-hospital mortality risk: 5 - 8%
-      gt0009|Total score: 3
-- id: score 4
-  input:
-    1:
-      'gt0003|Blood urea nitrogen (BUN) ': 1|local::at0006|>= 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 1|local::at0009|Present|
-      gt0005|SIRS: 1|local::at0012|>=2  SIRS criteria|
-      gt0006|Age: 1|local::at0015|>60 years|
-      gt0007|Pleural effusion: 0|local::at0008|Absent|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 1|local::at0006|Yes|
+      gt0004|Impaired mental status: 1|local::at0009|Yes|
+      gt0005|≥2 SIRS Criteria: 1|local::at0012|Yes|
+      gt0006|Age>60 years: 1|local::at0015|Yes|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-14T22:13+02:00[Europe/Stockholm]
   expected_output:
     1:
       gt0010|In-hospital mortality risk: 13 - 19%
       gt0009|Total score: 4
-- id: score 5
+- id: Score 4 same day as patients admission
   input:
     1:
-      'gt0003|Blood urea nitrogen (BUN) ': 1|local::at0006|>= 25 mg/dL or 8.92 mmol/L|
-      gt0004|Impaired mental status: 1|local::at0009|Present|
-      gt0005|SIRS: 1|local::at0012|>=2  SIRS criteria|
-      gt0006|Age: 1|local::at0015|>60 years|
-      gt0007|Pleural effusion: 1|local::at0009|Present|
-      gt0012|Event time: 2021-06-14T15:41:39.554+02:00[Europe/Stockholm]
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 1|local::at0006|Yes|
+      gt0004|Impaired mental status: 1|local::at0009|Yes|
+      gt0005|≥2 SIRS Criteria: 1|local::at0012|Yes|
+      gt0006|Age>60 years: 1|local::at0015|Yes|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-15T04:13+02:00[Europe/Stockholm]
   expected_output:
     1:
-      gt0010|In-hospital mortality risk: 22 - 27%
-      gt0009|Total score: 5
+      gt0010|In-hospital mortality risk: 13 - 19%
+      gt0009|Total score: 4
+- id: score 3 same day
+  input:
+    1:
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 1|local::at0006|Yes|
+      gt0004|Impaired mental status: 1|local::at0009|Yes|
+      gt0005|≥2 SIRS Criteria: 1|local::at0012|Yes|
+      gt0006|Age>60 years: 0|local::at0014|No|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-15T04:13+02:00[Europe/Stockholm]
+  expected_output:
+    1:
+      gt0010|In-hospital mortality risk: 5 - 8%
+      gt0009|Total score: 3
+- id: score 2 same day
+  input:
+    1:
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 1|local::at0006|Yes|
+      gt0004|Impaired mental status: 1|local::at0009|Yes|
+      gt0005|≥2 SIRS Criteria: 0|local::at0011|No|
+      gt0006|Age>60 years: 0|local::at0014|No|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-15T04:13+02:00[Europe/Stockholm]
+  expected_output:
+    1:
+      gt0010|In-hospital mortality risk: 2%
+      gt0009|Total score: 2
+- id: score 0 same day
+  input:
+    1:
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 1|local::at0006|Yes|
+      gt0004|Impaired mental status: 0|local::at0008|No|
+      gt0005|≥2 SIRS Criteria: 0|local::at0011|No|
+      gt0006|Age>60 years: 0|local::at0014|No|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-15T04:13+02:00[Europe/Stockholm]
+  expected_output:
+    1:
+      gt0010|In-hospital mortality risk: <2%
+      gt0009|Total score: 1
+- id: score 0
+  input:
+    1:
+      gt0003|BUN >25 mg/dL (8.92 mmol/L): 0|local::at0005|No|
+      gt0004|Impaired mental status: 0|local::at0008|No|
+      gt0005|≥2 SIRS Criteria: 0|local::at0011|No|
+      gt0006|Age>60 years: 0|local::at0014|No|
+      gt0007|Pleural effusion: 0|local::at0008|No|
+      gt0012|Event time: 2021-06-15T04:13+02:00[Europe/Stockholm]
+  expected_output:
+    1:
+      gt0010|In-hospital mortality risk: <1%
+      gt0009|Total score: 0
