Add Evaluation archetype.

--- a/gdl2/SLEDAI-2K.v1.test.yml
+++ b/gdl2/SLEDAI-2K.v1.test.yml
@@ -6,7 +6,6 @@ test_cases:
     1: {}
   expected_output:
     1: {}
-
 - id: Calculate SLEDAI-2K
   input:
     1:
@@ -37,4 +36,4 @@ test_cases:
   expected_output:
     1:
       gt0066|SLEDAI-2K: 41
-      gt0067|Comment: Authors recommend a cutoff of 3 or 4 to define active disease and the need to increase therapy.
+      gt0067|Interpretation: Authors recommend a cutoff of 3 or 4 to define active disease and the need to increase therapy.
