Update json file name

--- a/gdl2/CHIP_prediction_rule.v1.test.yml
+++ b/gdl2/CHIP_prediction_rule.v1.test.yml
@@ -1,6 +1,6 @@
 
 guidelines:
-  1: CHIP_CT_in_Head_Injury_Patients_Prediction_Rule.v1
+  1: CHIP_prediction_rule.v1
 test_cases:
 - id: Zero points
   input:
